2011-06-23  Carlos Garcia Campos  <cgarcia@igalia.com>

Reviewed by Martin Robinson.

        [UNIX] Fix compile warnings in NetscapePluginX11.cpp
        https://bugs.webkit.org/show_bug.cgi?id=63249

        * WebProcess/Plugins/Netscape/x11/NetscapePluginX11.cpp:
        (WebKit::setXButtonEventFields):
        (WebKit::NetscapePlugin::platformHandleMouseEvent):

Canonical link: https://commits.webkit.org/78886@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89580 268f45cc-cd09-0410-ab3c-d52691b4dbfc